[PageLifecycle] window.onfreeze --> document.onfreeze

After reconsideration, we decided that onfreeze and onresume should
follow pagevisibility. Hence this CL moves the calls from window to
document.

There is no compatibility risk, since these calls are still behind a
runtime flag.

For more details on the decision, please check the bug.

Bug: chromium:825424
Change-Id: I06af4579c58618f4131489ef62b5c8bc0927f2a3
Reviewed-on: https://chromium-review.googlesource.com/998841
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Shubhie Panicker <panicker@chromium.org>
Commit-Queue: Fadi Meawad <fmeawad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549005}
Former-commit-id: 9d24fb5a17858ceacf59a2c5075a31876842eab8